terraform-efs/ebs-efs-example/efs_sg.tf
resource "aws_security_group" "ingress-efs-test" {
  name   = "ingress-efs-test-sg"
  vpc_id = aws_vpc.test-env.id

  ingress {
    security_groups = [aws_security_group.morning-ssh-http.id]
    from_port       = 2049
    to_port         = 2049
    protocol        = "tcp"
  }

  egress {
    security_groups = [aws_security_group.morning-ssh-http.id]
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
  }
}
